# cudos-cosmwasm-bindings

./: .gitignore  Cargo.toml  README.md  test.json
.github/workflows/: test.yml
artifacts/: bindings_tester.wasm  checksums.txt
contracts/bindings_tester/: Cargo.toml  README.md  build.sh
contracts/bindings_tester/src/: contract.rs  msg.rs
contracts/bindings_tester/tests/: integration.rs
contracts/example/: Cargo.toml
contracts/native_tester/: Cargo.toml  build.sh
contracts/native_tester/src/: contract.rs  lib.rs  msg.rs  query.rs
contracts/nft_bindings_tester/: Cargo.toml  README.md  build.sh
contracts/nft_bindings_tester/examples/: schema.rs
contracts/nft_bindings_tester/src/: contract.rs  msg.rs
contracts/nft_bindings_tester/tests/: integration.rs
contracts/tester/: Cargo.toml  README.md
contracts/tester/src/: contract.rs  msg.rs
cudos-data/config/: config.toml
integration_tests/: README.md  test.sh  test_native.sh  test_nft.sh
integration_tests/msgs/: burn_nft_msg.json  issue_denom_msg.json  mint_nft_msg.json  query_approved_for_all.json  query_collection.json  query_denom_by_symbol.json  query_denoms.json  query_nft_approvals.json  query_owner.json  transfer_nft_msg.json
integration_tests/native_msgs/: burn_msg.json  delegate_msg.json  execute_msg.json  instantiate_msg.json  query_all_balances.json  query_all_delegations.json  query_all_validators.json  query_balance.json  query_bonded_denom.json  query_delegation.json  query_validator.json  send_msg.json  set_withdraw_address.json  undelegate_msg.json  vote_msg.json  withdraw_delegator_reward.json
integration_tests/nft_msgs/: approve_all_msg.json  approve_nft_msg.json  edit_nft_msg.json  query_denom_by_id.json  query_denom_by_name.json  query_nft.json  query_owner.json  query_supply.json  revoke_approve_nft_msg.json
schema/: cudos_msg.json  cudos_msg_wrapper.json  cudos_query.json  cudos_query_wrapper.json  denom_response.json
