[package]
name = "native-tester"
version = "0.0.1"
authors = ["Angel Valkov <angel.valkov@limechain.tech>"]
edition = "2021"
description = "simple tester for native modules"
license = "Apache-2.0"
repository = "https://github.com/CudoVentures/cudos-cosmwasm-bindings"
homepage = "https://www.cudos.org/"
documentation = "https://docs.cudos.org/"
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "=1.2.7", features = ["staking", "stargate"] }
cosmwasm-storage = { version = "=1.2.7" }
schemars = "=0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
thiserror = "1.0"

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "=1.2.7" }
